--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd backend && npm start",
-    "frontend": "cd frontend && npm start",
     "install-frontend": "cd frontend && npm install",
     "build": "cd frontend && npm run build",
-    "heroku=postbuild": "npm run install-frontend && npm run build"
+    "heroku-postbuild": "npm run install-frontend && npm run build"
   },
   "repository": {
     "type": "git",
